content with cards, sidemenu with items
both cards and sidemenu items use recyclerview

--- a/app/src/main/res/values/fontawesome.xml
+++ b/app/src/main/res/values/fontawesome.xml
@@ -4,4 +4,5 @@
     <string name="fa_bars">&#xf0c9;</string>
     <string name="fa_refresh">&#xf021;</string>
     <string name="fa_file">&#xf15b;</string>
+    <string name="fa_heart">&#xf004;</string>
 </resources>
