--- a/app/src/main/res/layout/postcard.xml
+++ b/app/src/main/res/layout/postcard.xml
@@ -7,17 +7,19 @@
     card_view:cardBackgroundColor="@android:color/white"
     card_view:cardElevation="2dp"
     card_view:cardUseCompatPadding="true"
+
     >
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="112dp"
             android:padding="16dp"
+            android:onClick="postClick"
             >
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="84dp"
+                android:layout_height="match_parent"
                 android:id="@+id/post_thumbnail"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
@@ -39,6 +41,15 @@
                 android:id="@+id/post_description"
                 android:layout_toEndOf="@+id/post_thumbnail"
                 android:layout_below="@+id/post_title"
+                android:textSize="12sp"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/post_commentsCount"
+                android:layout_toEndOf="@+id/post_thumbnail"
+                android:layout_below="@+id/post_description"
                 android:textSize="12sp"
                 />
 
