--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,17 +1,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
+
+    <item
+        android:id="@+id/action_newthread"
+        android:title="@string/action_settings"
+        android:icon="@drawable/ic_mode_comment_24dp"
+        android:orderInCategory="100"
+        app:showAsAction="ifRoom"
+        />
+
     <item
         android:id="@+id/action_refresh"
         android:title="@string/action_search"
-        android:orderInCategory="100"
-        android:icon="@drawable/ic_action_refresh"
+        android:orderInCategory="101"
+        android:icon="@drawable/ic_autorenew_24dp"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
-        android:orderInCategory="100"
+        android:orderInCategory="102"
         app:showAsAction="never" />
+
+
 
 </menu>
