--- a/app/src/main/res/layout/postcard.xml
+++ b/app/src/main/res/layout/postcard.xml
@@ -12,19 +12,18 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="112dp"
-            android:padding="16dp"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
             android:onClick="postClick"
             >
 
             <ImageView
-                android:layout_width="84dp"
-                android:layout_height="match_parent"
+                android:layout_width="70dp"
+                android:layout_height="108dp"
                 android:id="@+id/post_thumbnail"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
                 android:layout_marginEnd="16dp"
-                />
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true" />
 
             <TextView
                 android:layout_width="wrap_content"
