--- a/app/src/main/res/layout/postcard.xml
+++ b/app/src/main/res/layout/postcard.xml
@@ -13,12 +13,13 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/cv_relative_layout"
             android:padding="8dp"
             android:onClick="postClick"
             >
 
             <ImageView
-                android:layout_width="70dp"
+                android:layout_width="108dp"
                 android:layout_height="108dp"
                 android:id="@+id/post_thumbnail"
                 android:layout_marginEnd="16dp"
@@ -50,6 +51,12 @@
                 android:layout_toEndOf="@+id/post_thumbnail"
                 android:layout_below="@+id/post_description"
                 android:textSize="12sp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/post_id"
+                android:visibility="invisible"
                 />
 
         </RelativeLayout>
