utils, generators, deletion of postmodels. yeah.

--- a/app/src/main/res/layout/activity_thread.xml
+++ b/app/src/main/res/layout/activity_thread.xml
@@ -30,7 +30,7 @@
 
             <include
                 android:id="@+id/threadview_submission"
-                layout="@layout/postcard" />
+                layout="@layout/selected_submission" />
 
             <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
