--- a/app/src/main/res/layout/postcard.xml
+++ b/app/src/main/res/layout/postcard.xml
@@ -48,8 +48,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/post_commentsCount"
-                android:layout_toEndOf="@+id/post_thumbnail"
-                android:layout_below="@+id/post_description"
+                android:layout_alignStart="@+id/post_thumbnail"
+                android:layout_below="@+id/post_thumbnail"
+                android:layout_alignParentBottom="true"
                 android:textSize="12sp"
                 />
             <TextView
