--- a/app/src/main/res/layout/selected_submission.xml
+++ b/app/src/main/res/layout/selected_submission.xml
@@ -40,6 +40,7 @@
             android:id="@+id/selected_submission_description"
             android:layout_below="@+id/selected_submission_title"
             android:textSize="12sp"
+            android:autoLink="web"
             />
 
         <TextView
